Add Rufaida auther

--- a/homework-template/package.json
+++ b/homework-template/package.json
@@ -10,7 +10,7 @@
     "start": "node ./src/backend/index.js",
     "server": "nodemon ./src/backend/index.js"
   },
-  "author": "Benjamin Hughes",
+  "author": "Rufaida Jumaa",
   "license": "MIT",
   "dependencies": {
     "@types/xml": "^1.0.3",
